--- a/Aging_Process.ipynb
+++ b/Aging_Process.ipynb
@@ -2,13 +2,13 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "accelerator": "TPU",
+    "accelerator": "GPU",
     "colab": {
       "name": "Aging Process.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1tL-SGx8x8V1fJx_Uv_DmAsJU096a0QIN",
-      "authorship_tag": "ABX9TyO1fyRkv3bDcdaa7Dkz52Un",
+      "authorship_tag": "ABX9TyNTEmJqyXs1UHSyYOukf2Fy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
       "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f0K4o8kJo9m7",
-        "outputId": "b8e9e596-7d71-4b21-bad0-8f51a1750265"
+        "outputId": "a45073b4-13ad-4ae6-939e-684a2bc4ef09"
       },
       "source": [
         "!mkdir data\n",
@@ -56,21 +56,21 @@
         "\n",
         "!wget https://data.vision.ee.ethz.ch/cvl/rrothe/imdb-wiki/static/wiki_crop.tar"
       ],
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-05-05 17:50:39--  https://data.vision.ee.ethz.ch/cvl/rrothe/imdb-wiki/static/wiki_crop.tar\n",
+            "--2021-05-05 18:10:40--  https://data.vision.ee.ethz.ch/cvl/rrothe/imdb-wiki/static/wiki_crop.tar\n",
             "Resolving data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)... 129.132.52.178, 2001:67c:10ec:36c2::178\n",
             "Connecting to data.vision.ee.ethz.ch (data.vision.ee.ethz.ch)|129.132.52.178|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 811315200 (774M) [application/x-tar]\n",
             "Saving to: ‘wiki_crop.tar’\n",
             "\n",
-            "wiki_crop.tar       100%[===================>] 773.73M  23.6MB/s    in 33s     \n",
+            "wiki_crop.tar       100%[===================>] 773.73M  28.7MB/s    in 28s     \n",
             "\n",
-            "2021-05-05 17:51:13 (23.2 MB/s) - ‘wiki_crop.tar’ saved [811315200/811315200]\n",
+            "2021-05-05 18:11:08 (28.0 MB/s) - ‘wiki_crop.tar’ saved [811315200/811315200]\n",
             "\n"
           ],
           "name": "stdout"
@@ -84,14 +84,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65huIKKlpBtv",
-        "outputId": "e9d601a2-2713-4814-cf99-45df0bdf6296"
+        "outputId": "60e42c70-838d-4fdc-d1a7-6583c5198357"
       },
       "source": [
         "!cd data\n",
         "\n",
         "!tar -xvf wiki_crop.tar"
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -5136,7 +5136,7 @@
         "  ## Return a list of all images and respective age\n",
         "  return images, age_list"
       ],
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -5155,7 +5155,7 @@
         "  else:\n",
         "    return taken - birth.year - 1"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -5183,7 +5183,7 @@
         "from keras.utils import to_categorical\n",
         "from keras_preprocessing import image"
       ],
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -5232,7 +5232,7 @@
         "  model = Model(inputs = [input_layer], outputs = [enc])\n",
         "  return model"
       ],
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -5281,7 +5281,7 @@
         "  model = Model(inputs = [input_z_noise, input_label], outputs = [x])\n",
         "  return model"
       ],
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -5296,7 +5296,7 @@
         "  x = K.tile(x, [1, 32, 32, 1])\n",
         "  return x"
       ],
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -5338,7 +5338,7 @@
         "  model = Model(inputs = [image_input, label_input], outputs = [x])\n",
         "  return model"
       ],
-      "execution_count": 24,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -5368,7 +5368,7 @@
         "                outputs = [embeddings])\n",
         "  return model"
       ],
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -5395,7 +5395,7 @@
         "  model = Model(inputs = [input_layer], outputs = [output])\n",
         "  return model"
       ],
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -5509,7 +5509,7 @@
         "  plt.close()\n",
         "\n"
       ],
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -5520,7 +5520,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 438
         },
-        "outputId": "12b99790-7425-4323-b98d-4e9aace19d13"
+        "outputId": "5e2d0f91-c781-429d-e372-6d4d2565d959"
       },
       "source": [
         "if __name__ == '__main__':\n",
@@ -5588,8 +5588,7 @@
         "  y = to_categorical(final_age_cat, num_classes = classes)\n",
         "  \n",
         "  \n",
-        "\n",
-        "  \n",
+        "#   loaded_images = load_images(wiki_dir, images, (image_shape[0], image_shape[1]))\n",
         "  loaded_images = np.load(\"/content/drive/MyDrive/loaded_images.npy\")\n",
         "  \n",
         "  \n",
@@ -5742,7 +5741,7 @@
         "    ## Save the encoder model\n",
         "    encoder.save_weights(\"encoder.h5\")\n",
         "    \n",
-        "  \n",
+        "    \n",
         "  \"\"\"\n",
         "  Optimize the encoder and the generator network\n",
         "  \"\"\"\n",
@@ -5850,7 +5849,7 @@
         "    generator.save_weights(\"generator_optimized.h5\")\n",
         "    encoder.save_weights(\"encoder_optimized.h5\")"
       ],
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -5858,7 +5857,7 @@
             "Epoch: 0\n",
             "Number of batches:  31164\n",
             "Batch: 1\n",
-            "d_loss: 1.3033057749271393\n"
+            "d_loss: 1.8039156794548035\n"
           ],
           "name": "stdout"
         },
@@ -5869,7 +5868,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-ce1f2a6af82b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    120\u001b[0m         \u001b[0mrandom_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m         \u001b[0mg_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madversarial_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_on_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mz_noise2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_labels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"g_loss: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-15-6937a1490645>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    119\u001b[0m         \u001b[0mrandom_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrandom_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m         \u001b[0mg_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madversarial_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_on_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mz_noise2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_labels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    123\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"g_loss: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mtrain_on_batch\u001b[0;34m(self, x, y, sample_weight, class_weight, reset_metrics, return_dict)\u001b[0m\n\u001b[1;32m   1723\u001b[0m       iterator = data_adapter.single_batch_iterator(self.distribute_strategy, x,\n\u001b[1;32m   1724\u001b[0m                                                     \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1725\u001b[0;31m                                                     class_weight)\n\u001b[0m\u001b[1;32m   1726\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_train_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1727\u001b[0m       \u001b[0mlogs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/data_adapter.py\u001b[0m in \u001b[0;36msingle_batch_iterator\u001b[0;34m(strategy, x, y, sample_weight, class_weight)\u001b[0m\n\u001b[1;32m   1511\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1512\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1513\u001b[0;31m   \u001b[0m_check_data_cardinality\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1514\u001b[0m   \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDatasetV2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_tensors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1515\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mclass_weight\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/data_adapter.py\u001b[0m in \u001b[0;36m_check_data_cardinality\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m   1520\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1521\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_check_data_cardinality\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1522\u001b[0;31m   \u001b[0mnum_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1523\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_samples\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1524\u001b[0m     \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Data cardinality is ambiguous:\\n\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -5878,75 +5877,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YZAMoJxY41oN"
-      },
-      "source": [
-        "np.save(\"/content/drive/MyDrive/loaded_images.npy\",loaded_images)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kiZ2oBbW7XGq"
-      },
-      "source": [
-        "print(loaded_images)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pkhH0euNA8IQ"
-      },
-      "source": [
-        "import numpy as np\n",
-        "data = np.load(\"/content/drive/MyDrive/loaded_images.npy\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dJQ8ii8GBc6D"
-      },
-      "source": [
-        "print(len(data))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5gCZ9_oy7fA5"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HCPH2KrV-qm8"
-      },
-      "source": [
-        "from google.colab import files\n",
-        "files.download('')"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
